# datamirror

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/datamirror/: __init__.py  cli.py  db.py
src/datamirror/parsers/: __init__.py  amazon.py  apple.py  google.py  meta.py  tiktok.py
src/datamirror/templates/: deletion_request.txt.j2
src/datamirror/web/: __init__.py  app.py
src/datamirror/web/static/: htmx.min.js  style.css
src/datamirror/web/templates/: base.html  index.html  timeline.html
src/datamirror/web/templates/partials/: event_row.html
tests/: conftest.py  test_cli.py  test_db.py  test_export.py  test_integration.py  test_parsers.py  test_web.py
tests/fixtures/: amazon_orders.csv  apple_appstore.csv  google_activity.json  meta_posts.json  tiktok_userdata.json
